--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "braintree": "^3.26.0",
     "cloudinary": "^2.5.1",
     "concurrently": "^9.1.0",
